--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Fullstack Blogs</title>
+    <title>Authentication Blogs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Loved+by+the+King|Sedgwick+Ave&display=swap" rel="stylesheet">
