--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
     <title>Authentication Blogs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Loved+by+the+King|Sedgwick+Ave&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans|Sedgwick+Ave&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <noscript>
